# vodesfunc

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: conf.py  index.rst
docs/changelogs/: changelogs.rst
docs/submodules/: automation.rst  misc.rst  scale.rst  util.rst
examples/: 01 - Basic Encode.py  02 - Batch Muxing.py  config.ini
vodesfunc/: __init__.py  _metadata.py  aa.py  automation.py  denoise.py  descale.py  misc.py  noise.py  rescale.py  scale.py  spikefinder.py  types.py  util.py
vodesfunc/auto/: calc.py  check.py  convert.py  download.py  fonts.py  muxing.py  parsing.py  webhook.py
vodesfunc/rescale_ext/: __init__.py  base.py  fieldbased_rescale.py  ignoremask.py  mixed_rescale.py  regular_rescale.py  scaling_args.py
vodesfunc/vodesfunc/: misc.py  util.py
vodesfunc/vodesfunc/auto/: download.py  webhook.py
