
[project]
name = "vodesfunc"
version = "1.8.3"
description = "Vodes' random Vapoursynth Functions."
authors = [{ name = "Vodes", email = "vodes.imp@gmail.com" }]
dependencies = [
    "Vapoursynth>=66",
    "vsmuxtools>=0.2.1",
    "vsjetpack>=0.2.2,<0.5.0",
    "jetpytools>=1.2.3",
    "packaging>=23.2"
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
requires-python = ">=3.11"
readme = "README.md"
license = "MPL-2.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Source Code" = "https://github.com/Vodes/vodesfunc"
"Contact" = "https://discord.gg/Kf94Nv6WVN"

[tool.ruff]
line-length = 150
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = ["E722"]
fixable = ["F541", "F401", "E712", "E711"]
exclude = ["__init__.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false