
[project]
name = "vodesfunc"
dynamic = ["version"]
description = "Vodes' random Vapoursynth Functions."
authors = [{ name = "Vodes", email = "vodes.imp@gmail.com" }]
dependencies = [
    "Vapoursynth>=67",
    "vsmuxtools>=0.3.0",
    "vsjetpack>=0.7.0",
    "jetpytools>=1.2.3",
    "packaging>=23.2"
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
requires-python = ">=3.12"
readme = "README.md"
license = "MPL-2.0"

[build-system]
requires = ["hatchling>=1.27.0", "versioningit"]
build-backend = "hatchling.build"

[project.urls]
"Source Code" = "https://github.com/Vodes/vodesfunc"
"Contact" = "https://discord.gg/Kf94Nv6WVN"

[dependency-groups]
dev = [
    "vsstubs>=1.0.2",
    "awsmfunc>=1.3.5",
    "vsnoise>=1.2.1",
    "vapoursynth-ffms2>=5.2.0",
    "vapoursynth-akarin>=1.4.1",
    "vapoursynth-fmtconv>=31",
    "vapoursynth-resize2>=0.4.2",
    "vapoursynth-descale>=12",
    "vapoursynth-zsmooth>=0.15.4",
    "vapoursynth-manipmv>=1.3.0",
    "vapoursynth-mvtools>=26",
    "vapoursynth-bm3dcuda>=2.16",
    "vapoursynth-knlmeanscl>=1.2",
    "vapoursynth-vszip>=14.0.0",
    "vs-placebo>=2.0.2",
    "vsview>=0.5.0",
    "vspreview>=0.20.0"
]

[tool.hatch.build]
artifacts = ["vodesfunc/_version.py"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"
next-version = "minor"
write = { file = "vodesfunc/_version.py", template = "__version__ = \"{normalized_version}\"\n__version_tuple__ = {version_tuple}" }

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.ruff]
line-length = 150
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = ["E722", "E501", "RUF022"]
extend-select = ["F", "E", "RUF"]
fixable = ["F541", "F401", "E712", "E711"]
exclude = ["__init__.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.uv.sources]
muxtools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/muxtools.git" }
vsmuxtools = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-muxtools.git" }
vsjetpack = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack.git" }
vapoursynth-fmtconv = { index = "vs-wheels" }
vapoursynth-ffms2 = { index = "vs-wheels" }

[[tool.uv.index]]
name = "vs-wheels"
url = "https://jaded-encoding-thaumaturgy.github.io/vs-wheels/simple"
